[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pykz"
version = "0.1.3"
authors = [
    { name="Mathijs Schuurmans", email="mathijs.schuurmans@optia.be" },
]
description = "A Matplotlib-like interface for generating Tikz and Pgfplots figures"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.9"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "sphinx",
    "pydata-sphinx-theme",
    "myst_parser",
    "sphinx-gallery",
    "sphinx-codeautolink", 
    "matplotlib",
    "pdf2image"
]
