[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pykz"
authors = [
    { name="Mathijs Schuurmans", email="mathijs.schuurmans@optia.be" },
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.9"
]
dynamic = ["version", "description"]

[project.optional-dependencies]
dev = [
    "pytest",
    "sphinx",
    "pydata-sphinx-theme",
    "myst_parser",
    "sphinx-gallery",
    "sphinx-codeautolink", 
    "matplotlib",
    "pdf2image"
]
